CubeProgrammer_API.h

/* -------------------------------------------------------------------------------------------- */
/*                           STLINK Data Structures and Enumerations                            */
/* -------------------------------------------------------------------------------------------- */

/**
 * \enum  debugResetMode
 * \brief Choose the way to apply a system reset.
 */
typedef enum debugResetMode
{
    SOFTWARE_RESET,         /**< Apply a reset by the software. */
    HARDWARE_RESET,         /**< Apply a reset by the hardware. */
    CORE_RESET              /**< Apply a reset by the internal core peripheral. */
}debugResetMode;
/**
 * \enum  debugConnectMode
 * \brief Choose the appropriate mode for connection.
 */
typedef enum debugConnectMode
{
    NORMAL_MODE,            /**< Connect with normal mode, the target is reset then halted while the type of reset is selected using the [debugResetMode]. */
    HOTPLUG_MODE,           /**< Connect with hotplug mode,  this option allows the user to connect to the target without halt or reset. */
    UNDER_RESET_MODE,       /**< Connect with under reset mode, option allows the user to connect to the target using a reset vector catch before executing any instruction. */
    POWER_DOWN_MODE,        /**< Connect with power down mode. */
    PRE_RESET_MODE          /**< Connect with pre reset mode. */
}debugConnectMode;
/**
 * \enum  debugPort
 * \brief Select the debug port interface for connection.
 */
typedef enum debugPort
{
    JTAG = 0,               /**< JTAG debug port. */
    SWD = 1,                /**< SWD debug port. */
}debugPort;
/**
 * \struct  frequencies
 * \brief   Get supported frequencies for JTAG and SWD ineterfaces.
 */
typedef struct frequencies
{
    unsigned int jtagFreq[12];          /**<  JTAG frequency. */
    unsigned int jtagFreqNumber;        /**<  Get JTAG supported frequencies. */
    unsigned int swdFreq[12];           /**<  SWD frequency. */
    unsigned int swdFreqNumber;         /**<  Get SWD supported frequencies. */
}frequencies;
/**
 * \struct  debugConnectParameters
 * \brief   Get device characterization and specify connection parameters through ST-LINK interface.
 */
typedef struct debugConnectParameters
{
    debugPort dbgPort;                  /**< Select the type of debug interface #debugPort. */
    int index;                          /**< Select one of the debug ports connected. */
    char serialNumber[33];              /**< ST-LINK serial number. */
    char firmwareVersion[20];           /**< Firmware version. */
    char targetVoltage[5];              /**< Operate voltage. */
    int accessPortNumber;               /**< Number of available access port. */
    int accessPort;                     /**< Select access port controller. */
    debugConnectMode connectionMode;    /**< Select the debug CONNECT mode #debugConnectMode. */
    debugResetMode resetMode;           /**< Select the debug RESET mode #debugResetMode. */
    int isOldFirmware;                  /**< Check Old ST-LINK firmware version. */
    frequencies freq;                   /**< Supported frequencies #frequencies. */
    int frequency;                      /**< Select specific frequency. */
    int isBridge;                       /**< Indicates if it's Bridge device or not. */
    int shared;                         /**< Select connection type, if it's shared, use ST-LINK Server. */
    char board[100];                    /**< board Name */
}debugConnectParameters;
/* -------------------------------------------------------------------------------------------- */
/*                          General Data Structures and Enumerations                            */
/* -------------------------------------------------------------------------------------------- */

/**
 * \enum  targetInterfaceType
 * \brief Indicates the supported interfaces.
 */
typedef enum targetInterfaceType
{
    STLINK_INTERFACE = 0,           /**< STLINK used as connection interface. */
    USART_INTERFACE  = 1,           /**< USART used as connection interface. */
    USB_INTERFACE    = 2,           /**< USB DFU used as connection interface. */
    SPI_INTERFACE    = 3,           /**< SPI used as connection interface. */
    I2C_INTERFACE    = 4,           /**< I2C used as connection interface. */
    CAN_INTERFACE    = 5            /**< CAN used as connection interface. */
}targetInterfaceType;
/**
 * \struct  displayCallBacks
 * \brief   Functions must be implemented to personalize the display of messages.
 */
typedef struct displayCallBacks
{
    void (*initProgressBar)();                              /**< Add a progress bar. */
    void (*logMessage)(int msgType,  const wchar_t* str);   /**< Display internal messages according to verbosity level. */
    void (*loadBar)(int x, int n);                          /**< Display the loading of read/write process. */
} displayCallBacks;
typedef struct segmentData_C
{
    int address;                    /**< Segment start address. */
    int size;                       /**< Memory segment size. */
    unsigned char* data;            /**< Memory segment data. */
}segmentData_C ;
/**
 * \struct  FileData_C
 * \brief   Get file required informations.
 */
typedef struct fileData_C
{
    int Type;                       /**< File extension type. */
    int segmentsNbr;                /**< Number of required segments. */
    segmentData_C* segments;        /**< Segments description. */
}fileData_C ;
/**
 * \struct  GeneralInf
 * \brief   Get device general informations.
 */
typedef struct generalInf
{
    unsigned short deviceId;       /**< Device ID. */
    int  flashSize;                 /**< Flash memory size. */
    char type[4];                   /**< Device MCU or MPU. */
    char cpu[20];                   /**< Cortex CPU. */
    char name[100];                 /**< Device name. */
    char series[100];               /**< Device serie. */
    char description[150];          /**< Take notice. */
    char revisionId[100];           /**< Revision ID. */
    char board[100];                /**< Board Rpn. */
}generalInf ;