caller/src/bindings.rs

#[test]
fn bindgen_test_layout_debugConnectParameters() {
    assert_eq!(
        ::std::mem::size_of::<debugConnectParameters>(),
        304usize,
        concat!("Size of: ", stringify!(debugConnectParameters))
    );
    assert_eq!(
        ::std::mem::align_of::<debugConnectParameters>(),
        4usize,
        concat!("Alignment of ", stringify!(debugConnectParameters))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<debugConnectParameters>())).dbgPort as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(dbgPort)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<debugConnectParameters>())).index as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).serialNumber as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(serialNumber)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).firmwareVersion as *const _ as usize
        },
        41usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(firmwareVersion)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).targetVoltage as *const _ as usize
        },
        61usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(targetVoltage)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).accessPortNumber as *const _ as usize
        },
        68usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(accessPortNumber)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).accessPort as *const _ as usize
        },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(accessPort)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).connectionMode as *const _ as usize
        },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(connectionMode)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).resetMode as *const _ as usize
        },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(resetMode)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).isOldFirmware as *const _ as usize
        },
        84usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(isOldFirmware)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<debugConnectParameters>())).freq as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(freq)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<debugConnectParameters>())).frequency as *const _ as usize
        },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(frequency)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<debugConnectParameters>())).isBridge as *const _ as usize },
        196usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(isBridge)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<debugConnectParameters>())).shared as *const _ as usize },
        200usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(shared)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<debugConnectParameters>())).board as *const _ as usize },
        204usize,
        concat!(
            "Offset of field: ",
            stringify!(debugConnectParameters),
            "::",
            stringify!(board)
        )
    );
}
#[doc = "< STLINK used as connection interface."]
pub const targetInterfaceType_STLINK_INTERFACE: targetInterfaceType = 0;
#[doc = "< USART used as connection interface."]
pub const targetInterfaceType_USART_INTERFACE: targetInterfaceType = 1;
#[doc = "< USB DFU used as connection interface."]
pub const targetInterfaceType_USB_INTERFACE: targetInterfaceType = 2;
#[doc = "< SPI used as connection interface."]
pub const targetInterfaceType_SPI_INTERFACE: targetInterfaceType = 3;
#[doc = "< I2C used as connection interface."]
pub const targetInterfaceType_I2C_INTERFACE: targetInterfaceType = 4;
#[doc = "< CAN used as connection interface."]
pub const targetInterfaceType_CAN_INTERFACE: targetInterfaceType = 5;
#[doc = " \\enum  targetInterfaceType"]
#[doc = " \\brief Indicates the supported interfaces."]
pub type targetInterfaceType = ::std::os::raw::c_int;
#[doc = " \\struct  displayCallBacks"]
#[doc = " \\brief   Functions must be implemented to personalize the display of messages."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct displayCallBacks {
    #[doc = "< Add a progress bar."]
    pub initProgressBar: ::std::option::Option<unsafe extern "C" fn()>,
    #[doc = "< Display internal messages according to verbosity level."]
    pub logMessage: ::std::option::Option<
        unsafe extern "C" fn(msgType: ::std::os::raw::c_int, str_: *const wchar_t),
    >,
    #[doc = "< Display the loading of read/write process."]
    pub loadBar: ::std::option::Option<
        unsafe extern "C" fn(x: ::std::os::raw::c_int, n: ::std::os::raw::c_int),
    >,
}
#[test]
fn bindgen_test_layout_displayCallBacks() {
    assert_eq!(
        ::std::mem::size_of::<displayCallBacks>(),
        24usize,
        concat!("Size of: ", stringify!(displayCallBacks))
    );
    assert_eq!(
        ::std::mem::align_of::<displayCallBacks>(),
        8usize,
        concat!("Alignment of ", stringify!(displayCallBacks))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<displayCallBacks>())).initProgressBar as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(displayCallBacks),
            "::",
            stringify!(initProgressBar)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<displayCallBacks>())).logMessage as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(displayCallBacks),
            "::",
            stringify!(logMessage)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<displayCallBacks>())).loadBar as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(displayCallBacks),
            "::",
            stringify!(loadBar)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct segmentData_C {
    #[doc = "< Segment start address."]
    pub address: ::std::os::raw::c_int,
    #[doc = "< Memory segment size."]
    pub size: ::std::os::raw::c_int,
    #[doc = "< Memory segment data."]
    pub data: *mut ::std::os::raw::c_uchar,
}
#[test]
fn bindgen_test_layout_segmentData_C() {
    assert_eq!(
        ::std::mem::size_of::<segmentData_C>(),
        16usize,
        concat!("Size of: ", stringify!(segmentData_C))
    );
    assert_eq!(
        ::std::mem::align_of::<segmentData_C>(),
        8usize,
        concat!("Alignment of ", stringify!(segmentData_C))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<segmentData_C>())).address as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(segmentData_C),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<segmentData_C>())).size as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(segmentData_C),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<segmentData_C>())).data as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(segmentData_C),
            "::",
            stringify!(data)
        )
    );
}
#[doc = " \\struct  FileData_C"]
#[doc = " \\brief   Get file required informations."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fileData_C {
    #[doc = "< File extension type."]
    pub Type: ::std::os::raw::c_int,
    #[doc = "< Number of required segments."]
    pub segmentsNbr: ::std::os::raw::c_int,
    #[doc = "< Segments description."]
    pub segments: *mut segmentData_C,
}
#[test]
fn bindgen_test_layout_fileData_C() {
    assert_eq!(
        ::std::mem::size_of::<fileData_C>(),
        16usize,
        concat!("Size of: ", stringify!(fileData_C))
    );
    assert_eq!(
        ::std::mem::align_of::<fileData_C>(),
        8usize,
        concat!("Alignment of ", stringify!(fileData_C))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fileData_C>())).Type as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fileData_C),
            "::",
            stringify!(Type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fileData_C>())).segmentsNbr as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(fileData_C),
            "::",
            stringify!(segmentsNbr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fileData_C>())).segments as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fileData_C),
            "::",
            stringify!(segments)
        )
    );
}
#[doc = " \\struct  GeneralInf"]
#[doc = " \\brief   Get device general informations."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct generalInf {
    #[doc = "< Device ID."]
    pub deviceId: ::std::os::raw::c_ushort,
    #[doc = "< Flash memory size."]
    pub flashSize: ::std::os::raw::c_int,
    #[doc = "< Device MCU or MPU."]
    pub type_: [::std::os::raw::c_char; 4usize],
    #[doc = "< Cortex CPU."]
    pub cpu: [::std::os::raw::c_char; 20usize],
    #[doc = "< Device name."]
    pub name: [::std::os::raw::c_char; 100usize],
    #[doc = "< Device serie."]
    pub series: [::std::os::raw::c_char; 100usize],
    #[doc = "< Take notice."]
    pub description: [::std::os::raw::c_char; 150usize],
    #[doc = "< Revision ID."]
    pub revisionId: [::std::os::raw::c_char; 100usize],
    #[doc = "< Board Rpn."]
    pub board: [::std::os::raw::c_char; 100usize],
}
